--- a/index.html
+++ b/index.html
@@ -10,149 +10,147 @@
     
     <div class="container">
         <div class="board-row row-1">
-            <div class="box a8" data-box="a8" id="a8">
-                <img src="/icons/black-rook.png" id="black-rook">
+            <div class="box a8" data-letter="a" data-digit="8" data-box="a8" id="a8" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-rook.png" id="black-rook-1" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box b8" data-box="b8" id="b8">
-                <img src="/icons/black-knight.png" id="black-knight" >
+            <div class="box b8" data-letter="b" data-digit="8" data-box="b8" id="b8" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-knight.png" id="black-knight-1" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box c8" data-box="c8" id="c8">
-                <img src="/icons/black-bishop.png" id="black-bishop">
+            <div class="box c8" data-letter="c" data-digit="8" data-box="c8" id="c8" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-bishop.png" id="black-bishop-1" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box d8" data-box="d8" id="d8">
-                <img src="/icons/black-queen.png" id="black-queen">
+            <div class="box d8" data-letter="d" data-digit="8" data-box="d8" id="d8" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-queen.png" id="black-queen" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box e8" data-box="e8" id="e8">
-                <img src="/icons/black-king.png" id="black-king">
+            <div class="box e8" data-letter="e" data-digit="8" data-box="e8" id="e8" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-king.png" id="black-king" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box f8" data-box="f8" id="f8">
-                <img src="/icons/black-bishop.png" id="black-bishop">
+            <div class="box f8" data-letter="f" data-digit="8" data-box="f8" id="f8" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-bishop.png" id="black-bishop-2" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box g8" data-box="g8" id="g8">
-                <img src="/icons/black-knight.png" id="black-knight">
+            <div class="box g8" data-letter="g" data-digit="8" data-box="g8" id="g8" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-knight.png" id="black-knight-2" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box h8" data-box="h8" id="h8">
-                <img src="/icons/black-rook.png" id="black-rook">
+            <div class="box h8" data-letter="h" data-digit="8" data-box="h8" id="h8" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-rook.png" id="black-rook-2" draggable="true" ondragstart="drag(event)">
             </div>
         </div>
         <div class="board-row row-2">
-            <div class="box a7" data-box="a7" id="a7">
-                <img src="/icons/black-pawn.png" id="black-pawn-1">
+            <div class="box a7"  data-letter="a" data-digit="7" data-box="a7" id="a7" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-pawn.png" id="black-pawn-1" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box b7" data-box="b7" id="b7">
-                <img src="/icons/black-pawn.png" id="black-pawn-2">
+            <div class="box b7" data-letter="b" data-digit="7" data-box="b7" id="b7" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-pawn.png" id="black-pawn-2" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box c7" data-box="c7" id="c7">
-                <img src="/icons/black-pawn.png" id="black-pawn-3">
+            <div class="box c7" data-letter="c" data-digit="7" data-box="c7" id="c7" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-pawn.png" id="black-pawn-3" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box d7" data-box="d7" id="d7">
-                <img src="/icons/black-pawn.png" id="black-pawn-4">
+            <div class="box d7" data-letter="d" data-digit="7" data-box="d7" id="d7" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-pawn.png" id="black-pawn-4" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box e7" data-box="e7" id="e6">
-                <img src="/icons/black-pawn.png" id="black-pawn-5">
+            <div class="box e7" data-letter="e" data-digit="7" data-box="e7" id="e6" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-pawn.png" id="black-pawn-5" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box f7" data-box="f7" id="f5">
-                <img src="/icons/black-pawn.png" id="black-pawn-6">
+            <div class="box f7" data-letter="f" data-digit="7" data-box="f7" id="f5" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-pawn.png" id="black-pawn-6" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box g7" data-box="g7" id="g7">
-                <img src="/icons/black-pawn.png" id="black-pawn-7">
+            <div class="box g7" data-letter="g" data-digit="7" data-box="g7" id="g7" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-pawn.png" id="black-pawn-7" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box h7" data-box="h7" id="h7">
-                <img src="/icons/black-pawn.png" id="black-pawn-8">
+            <div class="box h7" data-letter="h" data-digit="7" data-box="h7" id="h7" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/black-pawn.png" id="black-pawn-8" draggable="true" ondragstart="drag(event)">
             </div>
         </div>
         <div class="board-row row-3">
-            <div class="box a6" data-box="a6"></div>
-            <div class="box b6" data-box="b6"></div>
-            <div class="box c6" data-box="c6"></div>
-            <div class="box d6" data-box="d6"></div>
-            <div class="box e6" data-box="e6"></div>
-            <div class="box f6" data-box="f6"></div>
-            <div class="box g6" data-box="g6"></div>
-            <div class="box h6" data-box="h6"></div>
+            <div class="box a6" data-letter="a" data-digit="6" data-box="a6" id="a6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box b6" data-letter="b" data-digit="6" data-box="b6" id="b6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box c6" data-letter="c" data-digit="6" data-box="c6" id="c6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box d6" data-letter="d" data-digit="6" data-box="d6" id="d6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box e6" data-letter="e" data-digit="6" data-box="e6" id="e6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box f6" data-letter="f" data-digit="6" data-box="f6" id="f6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box g6" data-letter="g" data-digit="6" data-box="g6" id="g6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box h6" data-letter="h" data-digit="6" data-box="h6" id="h6" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         </div>
         <div class="board-row row-4">
-            <div class="box a5" data-box="a5"></div>
-            <div class="box b5" data-box="b5"></div>
-            <div class="box c5" data-box="c5"></div>
-            <div class="box d5" data-box="d5"></div>
-            <div class="box e5" data-box="e5"></div>
-            <div class="box f5" data-box="f5"></div>
-            <div class="box g5" data-box="g5"></div>
-            <div class="box h5" data-box="h5"></div>
+            <div class="box a5" data-letter="a" data-digit="5" data-box="a5" id="a5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box b5" data-letter="b" data-digit="5" data-box="b5" id="b5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box c5" data-letter="c" data-digit="5" data-box="c5" id="c5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box d5" data-letter="d" data-digit="5" data-box="d5" id="d5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box e5" data-letter="e" data-digit="5" data-box="e5" id="e5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box f5" data-letter="f" data-digit="5" data-box="f5" id="f5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box g5" data-letter="g" data-digit="5" data-box="g5" id="g5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box h5" data-letter="h" data-digit="5" data-box="h5" id="h5" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         </div>
         <div class="board-row row-5">
-            <div class="box a4" data-box="a4"></div>
-            <div class="box b4" data-box="b4"></div>
-            <div class="box c4" data-box="c4"></div>
-            <div class="box d4" data-box="d4"></div>
-            <div class="box e4" data-box="e4"></div>
-            <div class="box f4" data-box="f4"></div>
-            <div class="box g4" data-box="g4"></div>
-            <div class="box h4" data-box="h4"></div>
+            <div class="box a4" data-letter="a" data-digit="4" data-box="a4" id="a4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box b4" data-letter="b" data-digit="4" data-box="b4" id="b4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box c4" data-letter="c" data-digit="4" data-box="c4" id="c4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box d4" data-letter="d" data-digit="4" data-box="d4" id="d4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box e4" data-letter="e" data-digit="4" data-box="e4" id="e4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box f4" data-letter="f" data-digit="4" data-box="f4" id="f4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box g4" data-letter="g" data-digit="4" data-box="g4" id="g4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box h4" data-letter="h" data-digit="4" data-box="h4" id="h4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         </div>
         <div class="board-row row-6">
-            <div class="box a3" data-box="a3" ondrop="drop(event)" ondragover="allowDrop(event)">
-
-            </div>
-            <div class="box b3" data-box="b3"></div>
-            <div class="box c3" data-box="c3"></div>
-            <div class="box d3" data-box="d3"></div>
-            <div class="box e3" data-box="e3"></div>
-            <div class="box f3" data-box="f3"></div>
-            <div class="box g3" data-box="g3"></div>
-            <div class="box h3" data-box="h3"></div>
+            <div class="box a3" data-letter="a" data-digit="3" data-box="a3" id="a3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box b3" data-letter="b" data-digit="3" data-box="b3" id="b3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box c3" data-letter="c" data-digit="3" data-box="c3" id="c3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box d3" data-letter="d" data-digit="3" data-box="d3" id="d3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box e3" data-letter="e" data-digit="3" data-box="e3" id="e3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box f3" data-letter="f" data-digit="3" data-box="f3" id="f3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box g3" data-letter="g" data-digit="3" data-box="g3" id="g3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+            <div class="box h3" data-letter="h" data-digit="3" data-box="h3" id="h3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
         </div>
         <div class="board-row row-7">
-            <div class="box a2" data-box="a2" ondrop="drop(event)" ondragover="allowDrop(event)">
-                <img src="/icons/white-pawn.png" draggable="true" ondragstart="drag(event)">
+            <div class="box a2" data-letter="a" data-digit="2" data-box="a2" id="a2" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-pawn.png" id="white-pawn-1" draggable="true" ondragstart="drag(event)" >
             </div>
-            <div class="box b2" data-box="b2">
-                <img src="/icons/white-pawn.png" >
+            <div class="box b2" data-letter="b" data-digit="2" data-box="b2" id="b2" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-pawn.png"  id="white-pawn-2" draggable="true" ondragstart="drag(event)" >
             </div>
-            <div class="box c2" data-box="c2">
-                <img src="/icons/white-pawn.png" >
+            <div class="box c2" data-letter="c" data-digit="2" data-box="c2" id="c2" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-pawn.png"  id="white-pawn-3" draggable="true" ondragstart="drag(event)" >
             </div>
-            <div class="box d2" data-box="d2">
-                <img src="/icons/white-pawn.png" >
+            <div class="box d2" data-letter="d" data-digit="2" data-box="d2" id="d2" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-pawn.png"  id="white-pawn-4" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box e2" data-box="e2">
-                <img src="/icons/white-pawn.png" >
+            <div class="box e2" data-letter="e" data-digit="2" data-box="e2" id="e2" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-pawn.png"  id="white-pawn-5" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box f2" data-box="f2">
-                <img src="/icons/white-pawn.png" >
+            <div class="box f2" data-letter="f" data-digit="2" data-box="f2" id="f2" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-pawn.png"  id="white-pawn-6" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box g2" data-box="g2">
-                <img src="/icons/white-pawn.png" >
+            <div class="box g2" data-letter="g" data-digit="2" data-box="g2" id="g2" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-pawn.png"  id="white-pawn-7" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box h2" data-box="h2">
-                <img src="/icons/white-pawn.png" >
+            <div class="box h2" data-letter="h" data-digit="2" data-box="h2" id="h2" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-pawn.png"  id="white-pawn-8" draggable="true" ondragstart="drag(event)">
             </div>
         </div>
         <div class="board-row row-8">
-            <div class="box a1" data-box="a1">
-                <img src="/icons/white-rook.png" >
+            <div class="box a1" data-letter="a" data-digit="1" data-box="a1" id="a1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-rook.png" id="white-rook-1" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box b1" data-box="b1">
-                <img src="/icons/white-knight.png" >
+            <div class="box b1" data-letter="b" data-digit="1" data-box="b1" id="b1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-knight.png" id="white-knight-1" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box c1" data-box="c1">
-                <img src="/icons/white-bishop.png" >
+            <div class="box c1" data-letter="c" data-digit="1" data-box="c1" id="c1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-bishop.png" id="white-bishop-1" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box d1" data-box="d1">
-                <img src="/icons/white-queen.png" >
+            <div class="box d1" data-letter="d" data-digit="1" data-box="d1" id="d1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-queen.png" id="white-queen" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box e1" data-box="e1">
-                <img src="/icons/white-king.png" >
+            <div class="box e1" data-letter="e" data-digit="1" data-box="e1" id="e1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-king.png" id="white-king" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box f1" data-box="f1">
-                <img src="/icons/white-bishop.png" >
+            <div class="box f1" data-letter="f" data-digit="1" data-box="f1" id="f1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-bishop.png" id="white-bishop-2" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box g1" data-box="g1">
-                <img src="/icons/white-knight.png" >
+            <div class="box g1" data-letter="g" data-digit="1" data-box="g1" id="g1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-knight.png" id="white-knight-2" draggable="true" ondragstart="drag(event)">
             </div>
-            <div class="box h1" data-box="h1">
-                <img src="/icons/white-rook.png" >
+            <div class="box h1" data-letter="h" data-digit="1" data-box="h1" id="h1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                <img src="/icons/white-rook.png" id="white-rook-2" draggable="true" ondragstart="drag(event)">
             </div>
         </div>
     </div>
